--- a/README.org
+++ b/README.org
@@ -10,6 +10,10 @@
   $ wine ./main.exe
 #+end_src
 
+** uwaga:
+testowane na raylib 4.5. wyższe werje mogą nie działać bo coś tam odwalili z liczeniem wektorów lololol
+
+
 Piszę tą próbę w C, bo nie znalazłem żadnej dobrej biblioteki do pisania "gier" dla racketa.
 Oczywiście jest wrapper dla raylib, ale dużo szybciej dla mnie jest napisać to najpierw w
 C + raylib a potem dopiero (jeśli w ogóle) próbować przeportować to do racketowego wrappera
