README.md, Makefile

--- a/README.org
+++ b/README.org
@@ -12,24 +12,27 @@
 #+end_src
 
 *** uwagi
+- nie edytuj README.md - jest generowane automatycznie z README.org
 - testowane na raylib 4.5. wyższe werje mogą nie działać bo coś tam odwalili z liczeniem wektorów lololol
 - wzory i pomysły są wyjęte z dupy, np
 
-$$ H = \text{wysokość okna} $$
+$$ \framebox{H = \text{wysokość okna}} $$
 
 $$
 \operatorname{target}(a, b, k) = \begin{cases}
 \begin{bmatrix}
-  (x_{a} + ((x_{b} - x_{a}) * y_{a}) / (y_{a} - y_{b})) \\
+  \frac{x_{a} + y_{a}(x_{b} - x_{a})}{y_{a} - y_{b}} \\
   0
 \end{bmatrix} & \text{ jeśli } -180 \le k \le 0
 \\
 \begin{bmatrix}
-  x_{a} + ((x_{b} - x_{a}) * (H - y_{a})) / (y_{b} - y_{a}) \\
+  \frac{x_{a} + (x_{b} - x_{a})(H - y_{a})}{y_{b} - y_{a}} \\
   H
 \end{bmatrix} & \text{ w innych wypadkach }
 \end{cases}
 $$
+  w notatkach oczywiscie cos tam jest skad one sie biora, ale sa zupelnie nie po kolei
+  i nawet sam sie juz po nich nie doczytam lolololol
 
 
 Piszę tą próbę w C, bo nie znalazłem żadnej dobrej biblioteki do pisania "gier" dla racketa.
