--- a/README.org
+++ b/README.org
@@ -16,7 +16,7 @@
 - testowane na raylib 4.5. wyższe werje mogą nie działać bo coś tam odwalili z liczeniem wektorów lololol
 - wzory i pomysły są wyjęte z dupy, np
 
-$$ \framebox{H = \text{wysokość okna}} $$
+$$ H = \text{wysokość okna} $$
 
 $$
 \operatorname{target}(a, b, k) = \begin{cases}
@@ -31,6 +31,7 @@ $$
 \end{bmatrix} & \text{ w innych wypadkach }
 \end{cases}
 $$
+
   w notatkach oczywiscie cos tam jest skad one sie biora, ale sa zupelnie nie po kolei
   i nawet sam sie juz po nich nie doczytam lolololol
 
