info o raylib 4.5.0, zwiększyłem max_draw_lines, bo czemu by nie

--- a/README.org
+++ b/README.org
@@ -14,7 +14,15 @@
 *** uwagi
 - nie edytuj README.md - jest generowane automatycznie z README.org
 - testowane na raylib 4.5. wyższe werje mogą nie działać bo coś tam odwalili z liczeniem wektorów lololol
-- wzory i pomysły są wyjęte z dupy, np
+#+BEGIN_SRC shell
+  $ git clone https://github.com/raysan5/raylib
+  $ cd raylib
+  $ git checkout 4.5.0
+  $ cd src/
+  $ make
+  $ sudo make install
+#+END_SRC
+- wzory i pomysły są wyjęte z dupy, np.:
 
 $$ H = \text{wysokość okna} $$
 
