--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@
   $ wine ./main.exe
 #+end_src
 
-*** uwagi
+** uwagi
 - nie edytuj README.md - jest generowane automatycznie z README.org
 - testowane na raylib 4.5. wyższe werje mogą nie działać bo coś tam odwalili z liczeniem wektorów lololol
 #+BEGIN_SRC shell
@@ -29,12 +29,12 @@ $$ H = \text{wysokość okna} $$
 $$
 \operatorname{target}(a, b, k) = \begin{cases}
 \begin{bmatrix}
-  \frac{x_{a} + y_{a}(x_{b} - x_{a})}{y_{a} - y_{b}} \\
+  ctg(\frac{\pi}{180}(180-k))y_{a}+x_{a} \\
   0
-\end{bmatrix} & \text{ jeśli } -180 \le k \le 0
+\end{bmatrix} & \text{ jeśli } k \in \left\langle 180, 360 \right\rangle \cup \left\{ 0 \right\}
 \\
 \begin{bmatrix}
-  \frac{x_{a} + (x_{b} - x_{a})(H - y_{a})}{y_{b} - y_{a}} \\
+  x_{a}+\frac{(H-y_{a})}{ctg((90-k)\frac{\pi}{180})} \\
   H
 \end{bmatrix} & \text{ w innych wypadkach }
 \end{cases}
@@ -53,4 +53,9 @@ Jest to bardzo nieokiełznany *proof-of-concept*, który musi zostać opatrzony 
 struktur itp itd, żeby przypominał jakkolwiek to, o co prosi zadanie. Ma na celu sprawdzenie jak
 wyglądałoby pisanie tego w C + raylib.
 
-[[https://science-cup.pl/wp-content/uploads/2023/11/MSC4_2023_Optyka.pdf][zadanie]]
+** keybindingi
+- /+/ - zwiększa grubość linii o 1 (max = 8)
+- /-/ - zmniejsza grubość linii o 1 (min = 1)
+
+** odniesienia
+- [[https://science-cup.pl/wp-content/uploads/2023/11/MSC4_2023_Optyka.pdf][zadanie]]
