--- a/README.org
+++ b/README.org
@@ -23,6 +23,7 @@
   $ sudo make install
 #+END_SRC
 - wymaga raygui
+- wymaga *GNU Make* (bsd make ma problem z /.SUFFIXES/)
 - wzory i pomysły są wyjęte z dupy, np.:
 
 $$ H = \text{wysokość okna} $$
