pre-kompilowanie i uruchamianie scm/ + hooki jak w emacs + get-mouse-position

--- a/README.org
+++ b/README.org
@@ -60,9 +60,13 @@ wyglądałoby pisanie tego w C + raylib.
 *MIMO* tego że program jest napisany w C, możliwe jest skryptowanie wszystkiego
 w tinyscheme, bo bardzo łatwy jest /interop/ między C a tinyscheme, co widać tu o.
 
+pre-kompiluje i uruchamia od razu wszystko w ~scm/~
+
 Zimplementowane funkcje:
 - ~(create-bounceable x1 y1 x2 y2)~ tworzy bounceable (jak na razie bez typu etc).
 - ~(create-source x y sz angle rel?)~ tworzy ~source_t~
+- ~(add-hook h f)~ dodaje hook ~f~ do akcji /h/
+- ~(get-mouse-position)~ zwraca ~(x . y)~ myszki
 
 + na początek odpala ~./rc.scm~
 
