--- a/README.org
+++ b/README.org
@@ -64,15 +64,13 @@ pre-kompiluje i uruchamia od razu wszystko w ~scm/~
 
 Zimplementowane funkcje:
 - ~(create-bounceable x1 y1 x2 y2)~ tworzy bounceable (jak na razie bez typu etc).
-- ~(create-source x y sz angle rel?)~ tworzy ~source_t~
+- ~(create-source alist)~ tworzy ~source_t~
 - ~(add-hook h f)~ dodaje hook ~f~ do akcji /h/
 - ~(get-mouse-position)~ zwraca ~(x . y)~ myszki
 
 + na początek odpala ~./rc.scm~
 
 ** keybindingi
-- /+/ - zwiększa grubość linii o 1 (max = 8)
-- /-/ - zmniejsza grubość linii o 1 (min = 1)
 - /A/ - dodaje sztynks
 - /e/ - pokazuje okno wykonywania scheme (do poprawki lolololol)
 
