--- a/README.org
+++ b/README.org
@@ -63,6 +63,8 @@ w tinyscheme, bo bardzo łatwy jest /interop/ między C a tinyscheme, co widać 
 pre-kompiluje i uruchamia od razu wszystko w ~scm/~
 
 Zimplementowane funkcje:
+- ~(measure-text text sz . spacing)~
+- ~(draw-text text pos sz color . spacing)~
 - ~(get-all-sources)~ zwraca wszystkie źródła. lepiej używać ~*sources*~, bo ma
   zawsze takie same wartości, a jest zmienną a nie funkcją.
 - ~(get-source n)~ zwraca dane o źródle ~(x y sz angle thickness r g b a)~
