--- a/README.org
+++ b/README.org
@@ -62,6 +62,9 @@ w tinyscheme, bo bardzo łatwy jest /interop/ między C a tinyscheme, co widać 
 
 pre-kompiluje i uruchamia od razu wszystko w ~scm/~
 
+dokumentacja funkcji scheme będzie/jest dostępna [[https://pub.krzysckh.org/msc2023.html][tutaj]] (jeszcze nie)
+lub może być zbudowana używając ~make scheme-docs~ (wymaga perla i sporej ilości modułów)
+
 Zimplementowane funkcje:
 - ~(measure-text text sz . spacing)~
 - ~(draw-text text pos sz color . spacing)~
@@ -82,6 +85,7 @@ Zimplementowane funkcje:
 
 
 + na początek odpala ~./rc.scm~
+
 
 ** keybindingi
 - /A/ - dodaje sztynks
