--- a/doc/coffee.tex
+++ b/doc/coffee.tex
@@ -1,7 +1,7 @@
 \pgfmathsetseed{\uniformdeviate 10000000}
 
 \pgfmathdeclarerandomlist{scales}{{0.5}{0.7}{0.9}{1.0}}
-\pgfmathdeclarerandomlist{stains}{{\coffeestainA}{\coffeestainB}{\coffeestainC}{\coffeestainD}}
+\pgfmathdeclarerandomlist{stains}{{\coffeestainA}{\coffeestainC}}
 
 \AddEverypageHook{%
   \pgfmathrandominteger{\angle}{15}{350}%
